--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "nodewithsql",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +14,14 @@
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/shovanshahi373/projectNew.git"
+  },
+  "bugs": {
+    "url": "https://github.com/shovanshahi373/projectNew/issues"
+  },
+  "homepage": "https://github.com/shovanshahi373/projectNew#readme",
+  "description": ""
 }
