define models for sequelizatioin and also added demo routes and views

--- a/package.json
+++ b/package.json
@@ -1,27 +1,18 @@
 {
-  "name": "nodewithsql",
+  "name": "sarokarproject",
   "version": "1.0.0",
-  "main": "app.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^2.6.1",
     "express": "^4.17.1",
-    "mysql": "^2.17.1"
-  },
-  "devDependencies": {
-    "nodemon": "^1.19.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/shovanshahi373/projectNew.git"
-  },
-  "bugs": {
-    "url": "https://github.com/shovanshahi373/projectNew/issues"
-  },
-  "homepage": "https://github.com/shovanshahi373/projectNew#readme",
-  "description": ""
+    "mysql2": "^1.6.5",
+    "sequelize": "^5.8.7"
+  }
 }
