--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "app.js"
+    "startNode": "node app.js",
+    "startNodemon": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,9 +13,11 @@
     "body-parser": "^1.19.0",
     "ejs": "^2.6.1",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
     "multer": "^1.4.1",
     "mysql": "^2.17.1",
-    "sequelize": "^5.8.7"
+    "mysql2": "^1.6.5",
+    "sequelize": "^5.11.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
