--- a/package.json
+++ b/package.json
@@ -5,20 +5,24 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "startDev": "nodemon app.js"
+    "start:dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "dotenv": "^8.0.0",
     "ejs": "^2.6.1",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.16.2",
     "multer": "^1.4.1",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^5.11.0"
   },
   "devDependencies": {
