--- a/credentials.example.env
+++ b/credentials.example.env
@@ -7,6 +7,10 @@ LOCAL_DB=
 LOCAL_USR=
 LOCAL_PASS=
 LOCAL_HOST=
+CLIENT_ID=
+CLIENT_SECRET=
+REDDIT_USER=
+REDDIT_PASS=
 
 # this is a dummy file for file "credentials.env"
 #create a file "credentials.env" and use above names to assign your variables accordingly
