--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "sequelize": "^5.11.0",
+    "snoostorm": "^1.1.2",
+    "snoowrap": "^1.19.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
