--- a/credentials.example.env
+++ b/credentials.example.env
@@ -12,5 +12,5 @@ CLIENT_SECRET=
 REDDIT_USER=
 REDDIT_PASS=
 
-# this is a dummy file for file "credentials.env"
-#create a file "credentials.env" and use above names to assign your variables accordingly
+# this is a dummy file for file ".env"
+#create a file ".env" and use above names to assign your variables accordingly
