--- a/credentials.example.env
+++ b/credentials.example.env
@@ -11,6 +11,7 @@ CLIENT_ID=
 CLIENT_SECRET=
 REDDIT_USER=
 REDDIT_PASS=
+GOOGLE_API_KEY=
 
 # this is a dummy file for file ".env"
 #create a file ".env" and use above names to assign your variables accordingly
