--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.16.2",
+    "gender-api-client": "^1.1.2",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "sequelize": "^5.11.0",
     "snoostorm": "^1.1.2",
