--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "sequelize": "^5.11.0",
+    "serve-favicon": "^2.5.0",
     "snoostorm": "^1.1.2",
     "snoowrap": "^1.19.0",
     "uuid": "^3.3.2"
